FIXED: Problemas en la localización y descripción (etiquetas) de errores